# flyRadar

./: CMakeLists.txt  README.md
include/: analyze.h  logic.h  nCursePrint.h  parse.h  readCSV.h  requestAPI.h
src/: logic.c  main.c  parse.c  requestAPI.c
src/analyze/: analyze.c  nCursePrint.c
src/analyze/cities/: cities.c  readCSV.c
